[gd_scene load_steps=16 format=2]

[ext_resource path="res://arcanoid/assets/fonts/advanced_pixel-7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/textures/Menu/MainMenu/main_menu-bg.png" type="Texture" id=2]
[ext_resource path="res://Main_Tittle.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/Schr√∂dinger.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://transition.shader" type="Shader" id=5]
[ext_resource path="res://ShaderTransitionout.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/audio/music/main_menu/Acrostics [Finished].wav" type="AudioStream" id=7]
[ext_resource path="res://Instructions.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/fonts/HabanoST.otf" type="DynamicFontData" id=10]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 5 )
shader_param/progress = 1.0
shader_param/diamondPixelSize = 10.0

[sub_resource type="DynamicFont" id=2]
size = 60
outline_size = 2
outline_color = Color( 0.0313726, 0.054902, 0.368627, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=4]
size = 45
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 34
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 128
font_data = ExtResource( 10 )

[node name="Main_Tittle" type="Node2D"]
script = ExtResource( 3 )
instructions = ExtResource( 8 )

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="MusicTimer" type="Timer" parent="BGM"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="ChangeToNewGameTimer" type="Timer" parent="."]
one_shot = true

[node name="ChangeToLoadGameTimer" type="Timer" parent="."]
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.00784314, 0.152941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BienvenidoA" type="Label" parent="CanvasLayer/TextureRect"]
margin_left = 376.0
margin_top = 50.0
margin_right = 652.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "BIENVENIDO A"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuilmesPoly" type="Label" parent="CanvasLayer/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.0
margin_top = -204.5
margin_right = 138.0
margin_bottom = -122.5
custom_fonts/font = SubResource( 3 )
text = "QuilmesPoly"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/TextureRect"]
margin_left = 361.181
margin_top = 495.455
margin_right = 631.181
margin_bottom = 535.455
color = Color( 0.164706, 0.258824, 0.380392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="CanvasLayer/TextureRect"]
margin_left = 631.547
margin_top = 372.546
margin_right = 881.547
margin_bottom = 412.546
color = Color( 0.164706, 0.258824, 0.380392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/TextureRect"]
margin_left = 175.908
margin_top = 374.272
margin_right = 407.908
margin_bottom = 414.272
color = Color( 0.164706, 0.258824, 0.380392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New_Game" type="Button" parent="CanvasLayer/TextureRect"]
margin_left = 144.091
margin_top = 344.636
margin_right = 442.091
margin_bottom = 440.636
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0.980392, 0.972549, 0.972549, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "NUEVO JUEGO"
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load_Game" type="Button" parent="CanvasLayer/TextureRect"]
margin_left = 610.0
margin_top = 344.0
margin_right = 908.0
margin_bottom = 440.0
custom_fonts/font = SubResource( 4 )
text = "CARGAR JUEGO"
flat = true
expand_icon = true

[node name="Instructions" type="Button" parent="CanvasLayer/TextureRect"]
margin_left = 375.011
margin_top = 496.708
margin_right = 621.011
margin_bottom = 537.708
custom_fonts/font = SubResource( 5 )
text = "INSTRUCCIONES"
flat = true

[node name="ShaderTransitionout" parent="CanvasLayer/TextureRect" instance=ExtResource( 6 )]
visible = false

[node name="NowLoadingScreen" type="ColorRect" parent="CanvasLayer/TextureRect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0117647, 0, 0.0862745, 1 )

[node name="LoadingText" type="Label" parent="CanvasLayer/TextureRect/NowLoadingScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -242.5
margin_top = -81.5
margin_right = 242.5
margin_bottom = 81.5
custom_fonts/font = SubResource( 6 )
text = "Cargando..."
align = 1
[connection signal="timeout" from="BGM/MusicTimer" to="." method="_on_MusicTimer_timeout"]
[connection signal="timeout" from="ChangeToNewGameTimer" to="." method="_on_ChangeToNewGameTimer_timeout"]
[connection signal="timeout" from="ChangeToLoadGameTimer" to="." method="_on_ChangeToLoadGameTimer_timeout"]
[connection signal="pressed" from="CanvasLayer/TextureRect/New_Game" to="." method="_on_New_Game_pressed"]
[connection signal="pressed" from="CanvasLayer/TextureRect/Load_Game" to="." method="_on_Load_Game_pressed"]
[connection signal="pressed" from="CanvasLayer/TextureRect/Instructions" to="." method="_on_Instructions_pressed"]
